api/infrastructure/network-policies/allow-from-ingress.yml
kind: NetworkPolicy
apiVersion: extensions/v1beta1
metadata:
  name: allow-from-ingress
  namespace: dbbc4558-cb92-11e7-8486-0a580a84021c-my-feature
spec:
  podSelector: {}
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            name: ingress-nginx
